strip out astro, initial commit with eleventy

--- a/11ty.md
+++ b/11ty.md
@@ -2,3 +2,9 @@
 
 - [Jamstack search with Pagefind](https://pagefind.app/)
 - [build a Shopify site with 11ty](https://www.netlify.com/blog/2021/07/20/build-your-own-shop-with-the-shopify-storefront-api-eleventy-and-serverless-functions/)
+- [Sorting and Dating 11ty Posts by Name](https://bennypowers.dev/posts/sort-and-date-11ty-posts-by-name/)
+- [11ty Quick Tip: Minify inline JavaScript in WebC](https://chringel.dev/blog/2023/11/11ty-quick-tip-minify-inline-javascript-in-webc/)
+- [Introduction to WebC](https://11ty.rocks/posts/introduction-webc/)
+- [Eleventy WebC in a Nutshell](https://blog.r0b.io/post/eleventy-webc-in-a-nutshell/)
+- [eleventy and webc](https://martinhicks.dev/articles/eleventy-and-webc)
+- [slashing by caching](https://www.bobmonsour.com/posts/slashing-by-caching/)
