implement draft posts with eleventyExcludeFromCollections: true

--- a/11ty.md
+++ b/11ty.md
@@ -3,8 +3,24 @@
 - [Jamstack search with Pagefind](https://pagefind.app/)
 - [build a Shopify site with 11ty](https://www.netlify.com/blog/2021/07/20/build-your-own-shop-with-the-shopify-storefront-api-eleventy-and-serverless-functions/)
 - [Sorting and Dating 11ty Posts by Name](https://bennypowers.dev/posts/sort-and-date-11ty-posts-by-name/)
-- [11ty Quick Tip: Minify inline JavaScript in WebC](https://chringel.dev/blog/2023/11/11ty-quick-tip-minify-inline-javascript-in-webc/)
-- [Introduction to WebC](https://11ty.rocks/posts/introduction-webc/)
-- [Eleventy WebC in a Nutshell](https://blog.r0b.io/post/eleventy-webc-in-a-nutshell/)
-- [eleventy and webc](https://martinhicks.dev/articles/eleventy-and-webc)
 - [slashing by caching](https://www.bobmonsour.com/posts/slashing-by-caching/)
+- [zero maintenance tag pages for your blog](https://www.11ty.dev/docs/quicktips/tag-pages/)
+- [draft posts using computed data](https://www.11ty.dev/docs/quicktips/draft-posts/)
+- [migrating my site from next.js to eleventy](https://sandroroth.com/blog/migrationl-to-eleventy/)
+- [mastering eleventy folder structure](https://www.njfamirm.ir/en/blog/eleventy-folder-structure-guide/)
+- [create a collection](https://11ty.recipes/recipes/create-a-collection/)
+- [How to Exclude content from Collections](https://www.11ty.dev/docs/collections/#how-to-exclude-content-from-collections)
+- [how to create a global production flag](https://www.roboleary.net/webdev/2024/01/24/eleventy-production-flag.html)
+- [Fetch data from the Github REST API to populate a projects page](https://www.roboleary.net/webdev/2024/02/07/eleventy-fetch.html)
+- [Rebuilding 11ty on a schedule](https://jamesdoc.com/blog/2023/11ty-daily-rebuilds/)
+- [autodiscoverable rss link](https://www.roboleary.net/2024/01/26/easy-discover-feed.html)
+- [getting to know eleventy v3 codebase github discussion](https://github.com/11ty/eleventy/issues/3159)
+
+## webc
+
+- [Introduction to WebC](https://11ty.rocks/posts/introduction-webc/)
+- [understanding webc features and concepts](https://11ty.rocks/posts/understanding-webc-features-and-concepts/)
+- [Eleventy WebC in a Nutshell](https://blog.r0b.io/post/eleventy-webc-in-a-nutshell/)
+- [webc updates in eleventy - looping](https://www.raymondcamden.com/2023/04/04/webc-updates-in-eleventy-looping)
+- [eleventy and webc](https://martinhicks.dev/articles/eleventy-and-webc)
+- [11ty Quick Tip: Minify inline JavaScript in WebC](https://chringel.dev/blog/2023/11/11ty-quick-tip-minify-inline-javascript-in-webc/)
