add "postTags" collection, fix /blog/tags and /blog/tags/[tag] pages, fix sitemap accidentally using a layout

--- a/11ty.md
+++ b/11ty.md
@@ -24,3 +24,8 @@
 - [webc updates in eleventy - looping](https://www.raymondcamden.com/2023/04/04/webc-updates-in-eleventy-looping)
 - [eleventy and webc](https://martinhicks.dev/articles/eleventy-and-webc)
 - [11ty Quick Tip: Minify inline JavaScript in WebC](https://chringel.dev/blog/2023/11/11ty-quick-tip-minify-inline-javascript-in-webc/)
+
+## load html custom data files in neovim
+- [vscode custom data file docs](https://github.com/microsoft/vscode-html-languageservice/blob/main/docs/customData.md)
+- [vscode github issue on extensions adding custom data files](https://github.com/microsoft/vscode/issues/135459)
+- [vscode extension for html/css detection](https://github.com/ecmel/vscode-html-css)
