--- a/11ty.md
+++ b/11ty.md
@@ -15,6 +15,8 @@
 - [Rebuilding 11ty on a schedule](https://jamesdoc.com/blog/2023/11ty-daily-rebuilds/)
 - [autodiscoverable rss link](https://www.roboleary.net/2024/01/26/easy-discover-feed.html)
 - [getting to know eleventy v3 codebase github discussion](https://github.com/11ty/eleventy/issues/3159)
+- [flexible components in eleventy with nunjucks macros](https://iainbean.com/posts/2020/flexible-components-in-eleventy-with-nunjucks-macros/)
+- [guestbook in eleventy](https://www.raymondcamden.com/2024/02/22/adding-a-guestbook-to-your-jamstack-site-yes-seriously)
 
 ## webc
 
@@ -29,3 +31,8 @@
 - [vscode custom data file docs](https://github.com/microsoft/vscode-html-languageservice/blob/main/docs/customData.md)
 - [vscode github issue on extensions adding custom data files](https://github.com/microsoft/vscode/issues/135459)
 - [vscode extension for html/css detection](https://github.com/ecmel/vscode-html-css)
+
+## css
+
+- [terminal.css - minimal terminal CSS stylesheet](https://github.com/Gioni06/terminal.css)
+- [pico.css - semantic html css stylesheet](https://picocss.com/docs/version-picker)
