remove tailwind, setup several 11ty plugins, and more
- removed tailwind and tailwind classes from the site
- added a <post-tags> and <main-nav> component
- added `eleventy-plugin-validate` and `zod` so that I can enforce
  frontmatter data schemas for my collections
- fixed a bug with the 404 page, needed a permalink of 404.html to work
  properly with eleventy's dev server and on Netlify
- added `markdown-it-anchor` dependency and customized the `markdown-it`
  configuration for Markdown files so that all headings are
  automatically turned into links
- bumped to from the v4 to v5 of the `3.0.0-alpha` for eleventy
- added config option so that all markdown blog posts that have
  filenames starting with an `_` underscore will not be processed in
  production builds
- updated `jsconfig.json` with a few config options to validate my JS
  with TS, and also added an auto-generated `global.d.ts` file that is
  updated based upon the result of each eleventy build (hooks into
  11ty's "after" event hook)
- implememented the syntax-highlight and render 11ty plugins
- fixed pagination issue with the `/blog/tags/tag.webc` file

--- a/11ty.md
+++ b/11ty.md
@@ -17,6 +17,10 @@
 - [getting to know eleventy v3 codebase github discussion](https://github.com/11ty/eleventy/issues/3159)
 - [flexible components in eleventy with nunjucks macros](https://iainbean.com/posts/2020/flexible-components-in-eleventy-with-nunjucks-macros/)
 - [guestbook in eleventy](https://www.raymondcamden.com/2024/02/22/adding-a-guestbook-to-your-jamstack-site-yes-seriously)
+- [Simply write better - Improve your technical writing by cutting down on adverbs](https://iainbean.com/posts/2021/simply-write-better/)
+- [system fonts don't have to be ugly](https://iainbean.com/posts/2021/system-fonts-dont-have-to-be-ugly/)
+- [simple ways to make content look good](https://set.studio/some-simple-ways-to-make-content-look-good/)
+- [the ideal viewport doesn't exist](https://viewports.fyi/)
 
 ## webc
 
@@ -26,6 +30,9 @@
 - [webc updates in eleventy - looping](https://www.raymondcamden.com/2023/04/04/webc-updates-in-eleventy-looping)
 - [eleventy and webc](https://martinhicks.dev/articles/eleventy-and-webc)
 - [11ty Quick Tip: Minify inline JavaScript in WebC](https://chringel.dev/blog/2023/11/11ty-quick-tip-minify-inline-javascript-in-webc/)
+- [why your web design sucks](https://heather-buchel.com/blog/2023/10/why-your-web-design-sucks/)
+- [Front-of-the-front-end and back-of-the-front-end web development](https://bradfrost.com/blog/post/front-of-the-front-end-and-back-of-the-front-end-web-development/)
+- [Tailwind and the Femininity of CSS](https://thoughtbot.com/blog/tailwind-and-the-femininity-of-css)
 
 ## load html custom data files in neovim
 - [vscode custom data file docs](https://github.com/microsoft/vscode-html-languageservice/blob/main/docs/customData.md)
