--- a/11ty.md
+++ b/11ty.md
@@ -33,6 +33,7 @@
 - [why your web design sucks](https://heather-buchel.com/blog/2023/10/why-your-web-design-sucks/)
 - [Front-of-the-front-end and back-of-the-front-end web development](https://bradfrost.com/blog/post/front-of-the-front-end-and-back-of-the-front-end-web-development/)
 - [Tailwind and the Femininity of CSS](https://thoughtbot.com/blog/tailwind-and-the-femininity-of-css)
+- [Styling rss and atom feeds](https://rknight.me/blog/styling-rss-and-atom-feeds/)
 
 ## load html custom data files in neovim
 - [vscode custom data file docs](https://github.com/microsoft/vscode-html-languageservice/blob/main/docs/customData.md)
