fix: use 11ty output dir instead of input for lightningCSS

--- a/11ty.md
+++ b/11ty.md
@@ -21,6 +21,7 @@
 - [system fonts don't have to be ugly](https://iainbean.com/posts/2021/system-fonts-dont-have-to-be-ugly/)
 - [simple ways to make content look good](https://set.studio/some-simple-ways-to-make-content-look-good/)
 - [the ideal viewport doesn't exist](https://viewports.fyi/)
+- [joining the indieweb](https://blog.rubenwardy.com/2023/10/10/hello-indieweb/)
 
 ## webc
 
